--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ nav .container {
   -webkit-animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     both;
   animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+
   background-color: #00adb5 !important;
   color: #eeeeee !important;
   padding-left: 20px !important;
@@ -192,23 +193,31 @@ nav .container {
 
   width: 100% !important;
 }
-.home .Tech_Stack {
-  margin-top: 8% !important;
-  margin-bottom: 10% !important;
-}
-.home .Tech_Stack i {
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  border: 2px solid #222831 !important;
-  padding: 10px !important;
-  margin-bottom: 10px !important;
-  cursor: pointer;
-  margin: 10px !important;
-  font-size: 70px !important;
+.Tech_Stack {
+  margin-top: 10% !important;
 }
 
-.home .Tech_Stack i:hover {
-  box-shadow: #00adb5 0px 4px 16px, #00adb5 0px 10px 10px !important;
-  transition: 0.5s !important;
+.home .Tech_Stack-body {
+  margin-bottom: 10%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.home .Tech_Stack-body i {
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  border: 2px solid #222831;
+  padding: 20px;
+  margin: 10px;
+  cursor: pointer;
+  font-size: 50px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.home .Tech_Stack-body i:hover {
+  box-shadow: #00adb5 0px 4px 16px, #00adb5 0px 10px 10px;
+  transform: translateY(-5px);
 }
 
 .home .display-5 {
@@ -252,12 +261,14 @@ nav .container {
   color: #00adb5;
 }
 .about .btn {
-  background-color: #00adb5;
+  background-color: #00adb5 !important;
   color: #eeeeee !important;
-  font-weight: 600;
-  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
-    rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
-    rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  padding-left: 20px !important;
+  padding-right: 20px !important;
+  width: 30% !important;
+  box-shadow: #00adb5 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
+    rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px,
+    rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 .about .modal {
   color: black !important;
@@ -286,27 +297,37 @@ nav .container {
 
 .works .card {
   cursor: pointer;
-  width: 100% !important;
-  padding: 15px !important;
-  background-color: #222831 !important;
-  color: #eeeeee !important;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
-    rgba(17, 17, 26, 0.05) 0px 8px 32px;
+  width: 100%;
+  padding: 15px;
+  background-color: #222831;
+  color: #eeeeee;
+  border-radius: 10px;
+  box-shadow: 0 4px 16px rgba(17, 17, 26, 0.1),
+    0 8px 32px rgba(17, 17, 26, 0.05);
 }
 .works .card:hover {
   box-shadow: #00adb5 0px 10px 36px, #00adb5 0px 20px 40px !important;
   transition: 0.9s !important;
 }
 .works .card .btn {
-  font-weight: 600;
-  background-color: #00adb5;
-  margin-bottom: 10px !important;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #e63946;
+  color: #eeeeee;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none !important;
+}
+.works .card .btn:hover {
+  background-color: #ba1a27 !important;
 }
 
 .works i {
   font-weight: 600;
   color: #00adb5 !important;
-  font-size: 120px !important;
+  font-size: 100px !important;
+
   margin: 20px auto !important;
   padding: 10px !important;
 }
@@ -343,19 +364,25 @@ nav .container {
 
 .projects .box img {
   width: 100% !important;
+  border-bottom: 5px solid #393e46 !important;
   height: 290px !important;
   margin-bottom: 15px !important;
 }
 .projects .box .btn {
-  margin-top: 15px !important;
-  margin-bottom: 35px !important;
-  width: 40%;
-  background-color: #00adb5 !important;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px,
-    rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
-    rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
-  border: none !important;
-  font-weight: 600;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #e63946;
+  color: #eeeeee;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none !important;
+  width: 80%;
+  margin: 20px auto !important;
+}
+
+.projects .box .btn:hover {
+  background-color: #ba1a27;
 }
 
 .contact {
@@ -377,10 +404,14 @@ nav .container {
 }
 
 .contact form .btn {
-  font-weight: 600;
-  background-color: #0072b1 !important;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  background-color: #00adb5 !important;
+  color: #eeeeee !important;
+  padding-left: 20px !important;
+  padding-right: 20px !important;
+  width: 100% !important;
+  box-shadow: #00adb5 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
+    rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px,
+    rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 .form-group input,
 .form-group textarea {
@@ -440,6 +471,9 @@ nav .container {
   .about img {
     margin-bottom: 10px !important;
   }
+  .about .btn {
+    width: 100% !important;
+  }
 
   h1 {
     font-size: 25px !important;
@@ -455,8 +489,9 @@ nav .container {
     margin-bottom: 10px !important;
   }
   .home .Tech_Stack i {
-    font-size: 35px !important;
+    font-size: 30px !important;
     margin: 5px !important;
+    padding: 5px !important;
   }
   .contact form {
     width: 100% !important;
