--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ body {
 }
 
 section {
-  height: 100vh;
+  height: 100% !important;
 
   padding: 20px !important;
 }
@@ -173,18 +173,18 @@ nav .container {
   margin-top: 12% !important;
 }
 .about .container {
-  margin-top: 14% !important;
+  margin: 14% auto !important;
 }
 
 .works .container {
-  margin-top: 8% !important;
+  margin: 8% auto !important;
 }
 .contact .container {
   margin-top: 3% !important;
 }
 
 .projects .container {
-  margin-top: 7% !important;
+  margin: 7% auto !important;
 }
 
 .home img {
@@ -206,18 +206,18 @@ nav .container {
 }
 
 .home .Tech_Stack-body i {
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  border: 2px solid #222831;
   padding: 20px;
   margin: 10px;
   cursor: pointer;
-  font-size: 50px;
+  font-size: 55px;
   transition: transform 0.3s ease-in-out;
 }
 
 .home .Tech_Stack-body i:hover {
   box-shadow: #00adb5 0px 4px 16px, #00adb5 0px 10px 10px;
   transform: translateY(-5px);
+
+  border: 2px solid #00adb5;
 }
 
 .home .display-5 {
@@ -235,6 +235,7 @@ nav .container {
   box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2) !important;
   margin-top: 2px !important;
   font-weight: 600;
+  font-size: 17px !important;
   color: #fff !important;
 }
 
@@ -243,6 +244,10 @@ nav .container {
 }
 .Linkedin {
   background-color: #0072b1 !important;
+}
+
+.youtube {
+  background-color: #ff0000 !important;
 }
 
 .about {
@@ -284,7 +289,7 @@ nav .container {
   font-family: "Montserrat", sans-serif !important;
 
   font-weight: bold;
-  text-shadow: 1px 1px #222831;
+
   color: #222831 !important;
 }
 .works-header {
@@ -462,6 +467,9 @@ nav .container {
   .home {
     text-align: center !important;
   }
+  .home img {
+    margin-bottom: 20px !important;
+  }
 
   .home .container {
     margin-top: 35% !important;
@@ -489,6 +497,10 @@ nav .container {
     margin-bottom: 10px !important;
   }
   .home .Tech_Stack i {
+    border: 2px solid #222831;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+      rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     font-size: 30px !important;
     margin: 5px !important;
     padding: 5px !important;
