--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ nav .container {
 
 .home .Tech_Stack-body i {
   padding: 20px;
-  margin: 10px;
+  margin: 12px;
   cursor: pointer;
   font-size: 55px;
   transition: transform 0.3s ease-in-out;
@@ -405,7 +405,7 @@ nav .container {
 .contact form {
   margin: 5px auto !important;
   padding: 10px !important;
-  width: 80% !important;
+  width: 90% !important;
 }
 
 .contact form .btn {
@@ -414,18 +414,20 @@ nav .container {
   padding-left: 20px !important;
   padding-right: 20px !important;
   width: 100% !important;
-  box-shadow: #00adb5 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
-    rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px,
-    rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 .form-group input,
 .form-group textarea {
+  outline: 0px !important;
   width: 100% !important;
-  padding: 10px !important;
+  padding: 15px !important;
   font-weight: 600;
-  border: 1px solid #222831 !important;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  border: none !important;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 .footer {
   background-color: #222831 !important;
@@ -442,7 +444,7 @@ nav .container {
   }
   .navbar-toggler {
     color: #0072b1 !important;
-
+    outline: 0px !important;
     border: 2px solid #eeeeee !important;
   }
   .navbar-toggler span {
