--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,7 @@ nav .container {
 .works .card:hover {
   box-shadow: #00adb5 0px 10px 36px, #00adb5 0px 20px 40px !important;
   transition: 0.9s !important;
+  transform: translateY(-10px);
 }
 .works .card .btn {
   padding: 10px 20px;
@@ -364,6 +365,7 @@ nav .container {
 }
 .projects .box:hover {
   box-shadow: #00adb5 0px 4px 16px, #00adb5 0px 10px 10px !important;
+  transform: translateY(-10px);
   transition: 0.8s !important;
 }
 
@@ -411,8 +413,8 @@ nav .container {
 .contact form .btn {
   background-color: #00adb5 !important;
   color: #eeeeee !important;
-  padding-left: 20px !important;
-  padding-right: 20px !important;
+  padding: 12px !important;
+
   width: 100% !important;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
