--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,8 @@ nav .container {
   margin: 8% auto !important;
 }
 .contact .container {
-  margin-top: 3% !important;
+  margin-top: 8% !important;
+  margin-bottom: 5% !important;
 }
 
 .projects .container {
@@ -209,14 +210,15 @@ nav .container {
 }
 
 .home .Tech_Stack-body i {
-  padding: 20px;
-  margin: 12px;
   cursor: pointer;
   font-size: 55px;
   transition: transform 0.3s ease-in-out;
 }
+.home .Tech_Stack-body div {
+  padding: 37px !important;
+}
 
-.home .Tech_Stack-body i:hover {
+.home .Tech_Stack-body div:hover {
   box-shadow: #00adb5 0px 4px 16px, #00adb5 0px 10px 10px;
   transform: translateY(-5px);
 
@@ -412,7 +414,7 @@ nav .container {
 }
 
 .contact .contact-header {
-  margin-bottom: 4% !important;
+  margin-bottom: 6% !important;
   color: #222831 !important;
 }
 .contact .contact-header span {
@@ -421,7 +423,7 @@ nav .container {
 .contact form {
   margin: 5px auto !important;
   padding: 10px !important;
-  width: 90% !important;
+  width: 100% !important;
 }
 
 .contact form .btn {
@@ -437,6 +439,7 @@ nav .container {
 .form-group input,
 .form-group textarea {
   outline: 0px !important;
+  font-family: Arial, FontAwesome;
   width: 100% !important;
   padding: 15px !important;
   font-weight: 600;
@@ -446,7 +449,10 @@ nav .container {
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 .footer {
-  background-color: #222831 !important;
+  background-image: url("../assets/bg-dark.gif") !important;
+  background-size: cover !important;
+  background-attachment: fixed !important;
+  background-position: center;
   color: #eeeeee !important;
   padding: 20px !important;
 }
@@ -514,14 +520,14 @@ nav .container {
     height: 200px !important;
     margin-bottom: 10px !important;
   }
+  .home .Tech_Stack-body div {
+    padding: 20px !important;
+    border-bottom: 2px solid #222831 !important;
+    box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2) !important;
+    margin: 12px !important;
+  }
   .home .Tech_Stack i {
-    border: 2px solid #222831;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-      rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    font-size: 30px !important;
-    margin: 5px !important;
-    padding: 5px !important;
+    font-size: 40px !important;
   }
   .contact form {
     width: 100% !important;
