--- a/css/style.css
+++ b/css/style.css
@@ -522,6 +522,7 @@ nav .container {
   }
   .home .Tech_Stack-body div {
     padding: 20px !important;
+    border: none !important;
     border-bottom: 2px solid #222831 !important;
     box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2) !important;
     margin: 12px !important;
