--- a/css/style.css
+++ b/css/style.css
@@ -358,13 +358,11 @@ nav .container {
 
 .works i {
   font-weight: 600;
-  background-color: #ba1a27 !important;
-  color: white !important;
-  font-size: 70px !important;
-  border: 2px solid #e63946;
-  border-radius: 50% !important;
 
-  margin: 20px auto !important;
+  color: #00adb5 !important;
+  font-size: 70px !important;
+
+  margin: 10px auto !important;
   padding: 30px !important;
 }
 .works .modal {
@@ -478,10 +476,87 @@ nav .container {
   padding: 20px !important;
 }
 
-@media screen and (max-width: 1000px) {
+.navbar-mobile {
+  display: none !important;
+}
+
+.sidebar {
+  text-align: center !important;
+  width: 100%;
+  position: fixed;
+  align-items: left;
+  top: 75px !important;
+  height: 100%;
+  left: -100%;
+  transition: all 0.5s ease;
+  z-index: 9999;
+}
+
+.sidebar a {
+  display: block;
+  color: white;
+  border-bottom: 2px solid rgba(22, 22, 26, 0.18);
+  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2) !important;
+  padding: 10px 0;
+  margin-bottom: 10px !important;
+  text-decoration: none;
+  font-size: 18px !important;
+  text-decoration: none !important;
+  font-weight: 600 !important;
+}
+.sidebar a:hover {
+  text-decoration: none !important;
+  color: white !important;
+}
+.sidebar .resume {
+  margin-top: 20px !important;
+  margin-left: 0px !important;
+}
+
+.sidebar .Linkedin,
+.sidebar .fb,
+.sidebar .yt {
+  padding: 10px 30px !important;
+  font-weight: 700;
+  border-radius: 0px !important;
+  border-bottom: 2px solid rgba(22, 22, 26, 0.18);
+  box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2) !important;
+}
+.yt {
+  background-color: #ff0000 !important;
+  color: white !important;
+}
+
+.sidebar .active {
+  color: #00adb5 !important;
+
+  text-decoration: none !important;
+}
+
+@media screen and (max-width: 700px) {
+  .nav-desktop {
+    display: none !important;
+  }
+  .navbar-mobile {
+    display: block !important;
+  }
+
+  .sidebar-hidden {
+    background-image: url("../assets/bg-dark.gif") !important;
+    background-size: cover !important;
+    background-attachment: fixed !important;
+    background-position: center;
+    display: block !important;
+    top: 75px !important;
+    left: 0% !important;
+    background-color: black;
+    z-index: 9999;
+  }
+
   nav .container {
     padding: 10px !important;
   }
+
   .nav-item {
     margin-left: 5px !important;
   }
