--- a/css/style.css
+++ b/css/style.css
@@ -485,7 +485,7 @@ nav .container {
   width: 100%;
   position: fixed;
   align-items: left;
-  top: 75px !important;
+  top: 77px !important;
   height: 100%;
   left: -100%;
   transition: all 0.5s ease;
@@ -495,7 +495,7 @@ nav .container {
 .sidebar a {
   display: block;
   color: white;
-  border-bottom: 2px solid rgba(22, 22, 26, 0.18);
+
   box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2) !important;
   padding: 10px 0;
   margin-bottom: 10px !important;
@@ -515,10 +515,12 @@ nav .container {
 
 .sidebar .Linkedin,
 .sidebar .fb,
-.sidebar .yt {
+.sidebar .yt,
+.sidebar .resume {
+  border-radius: 10px !important;
   padding: 10px 30px !important;
   font-weight: 700;
-  border-radius: 0px !important;
+
   border-bottom: 2px solid rgba(22, 22, 26, 0.18);
   box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2) !important;
 }
@@ -552,9 +554,9 @@ nav .container {
     background-attachment: fixed !important;
     background-position: center;
     display: block !important;
-    top: 75px !important;
+    top: 77px !important;
     left: 0% !important;
-    background-color: black;
+
     z-index: 9999;
   }
 
