--- a/css/style.css
+++ b/css/style.css
@@ -489,7 +489,8 @@ nav .container {
   height: 100%;
   left: -100%;
   transition: all 0.5s ease;
-  z-index: 9999;
+  z-index: 9999 !important;
+  background-color: black !important;
 }
 
 .sidebar a {
@@ -553,11 +554,12 @@ nav .container {
     background-size: cover !important;
     background-attachment: fixed !important;
     background-position: center;
+    background-color: black !important;
     display: block !important;
     top: 77px !important;
     left: 0% !important;
 
-    z-index: 9999;
+    z-index: 9999 !important;
   }
 
   nav .container {
