--- a/css/style.css
+++ b/css/style.css
@@ -224,25 +224,47 @@ nav .container {
 }
 
 .home .btn {
-  border-bottom: 2px solid rgba(22, 22, 26, 0.18);
   box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2) !important;
   margin-top: 2px !important;
   font-weight: 600;
-  font-size: 17px !important;
-  color: #fff !important;
+  font-size: 15px !important;
+  border: 2px solid #00adb5 !important;
+}
+
+.home .btn:hover {
+  background-color: #00adb5 !important;
+  color: white !important;
+  transition: 0.2s;
+  transform: translateY(-10px);
+}
+
+.about_me {
+  font-weight: 700 !important;
+
+  background-color: transparent !important;
+  color: #00adb5 !important;
+
+  box-shadow: #00adb5 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
+    rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px,
+    rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 
 .fb {
-  background-color: #4267b2 !important;
+  color: #4267b2 !important;
 }
 .Linkedin {
-  background-color: #0072b1 !important;
+  color: #0072b1 !important;
+}
+.github {
+  color: #171515 !important;
 }
 
 .youtube {
-  background-color: #ff0000 !important;
+  color: #ff0000 !important;
 }
-
+.discord {
+  color: #7289da !important;
+}
 .about {
   background-image: url("../assets/bg-dark.gif") !important;
   background-size: cover !important;
@@ -275,7 +297,6 @@ nav .container {
 
 .btn:hover {
   transition: 0.5s !important;
-  border-radius: 10px 100px / 120px;
 }
 
 .about .modal {
@@ -425,14 +446,17 @@ nav .container {
 }
 
 .contact form .btn {
+  border: none !important;
   background-color: #00adb5 !important;
-  color: #eeeeee !important;
+  color: #fff !important;
   padding: 12px !important;
   margin: 15px auto !important;
+  font-weight: 700 !important;
   width: 100% !important;
-  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
-    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
-    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+.contact form .btn:hover {
+  background-color: black !important;
 }
 .form-group input,
 .form-group textarea {
@@ -447,6 +471,7 @@ nav .container {
     rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
     rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
+
 .footer {
   background-image: url("../assets/bg-dark.gif") !important;
   background-size: cover !important;
@@ -515,7 +540,6 @@ nav .container {
   box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2) !important;
 }
 .yt {
-  background-color: #ff0000 !important;
   color: white !important;
 }
 
@@ -643,5 +667,31 @@ nav .container {
   .works .card:hover {
     box-shadow: none !important;
     transform: none !important;
+  }
+  .about_me {
+    display: block !important;
+    margin-bottom: 10px;
+  }
+
+  .fb-nav {
+    background-color: #4267b2 !important;
+    color: white !important;
+  }
+  .Linkedin-nav {
+    background-color: #0072b1 !important;
+    color: white !important;
+  }
+  .github-nav {
+    background-color: #171515 !important;
+    color: white !important;
+  }
+
+  .youtube-nav {
+    background-color: #ff0000 !important;
+    color: white !important;
+  }
+  .discord-nav {
+    background-color: #7289da !important;
+    color: white !important;
   }
 }
